tree-sitter-dust/corpus/as.txt
================================================================================
Simple As
================================================================================

1 as int

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (as
        (expression
          (value
            (integer)))
        (type)))))

================================================================================
As Function
================================================================================

foo as (int) -> int

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (as
        (expression
          (identifier))
        (type
          (type)
          (type))))))

================================================================================
As List in For Loop
================================================================================

for i in foobar as list {}

--------------------------------------------------------------------------------

(root
  (statement
    (for
      (identifier)
      (expression
        (as
          (expression
            (identifier))
          (type
            (identifier))))
      (block))))
