tree-sitter-dust/corpus/built_in_function.txt
================================================================================
Simple Function Call
================================================================================

(output 'hi')

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (function_call
        (expression
          (identifier))
        (expression
          (value
            (string)))))))

================================================================================
Nested Function Call
================================================================================

(assert_equal (random_integer) 4)

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (function_call
        (expression
          (identifier))
        (expression
          (identifier))
        (expression
          (value
            (integer)))))))
