tree-sitter-dust/corpus/comments.txt
================================================================================
Full Line Comments
================================================================================

not_a_comment
# comment

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (identifier))))

================================================================================
Partial Line Comments
================================================================================

not_a_comment # comment

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (identifier))))

================================================================================
Multiline Comments
================================================================================

# comment #
not_a_comment #
# comment # "not a comment"

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (identifier)))
  (statement
    (expression
      (value
        (string)))))
