tree-sitter-dust/corpus/filter.txt
==================
Filter Loop
==================

filter 1 i in [1, 2, 3] {
  i <= 1 
}

---

(root
  (item
    (statement
      (filter
        (expression
          (value
            (integer)))
        (identifier)
        (expression
          (value
            (list
              (expression
                (value
                  (integer)))
              (expression
                (value
                  (integer)))
              (expression
                (value
                  (integer))))))
        (item
          (statement
            (expression
              (logic
                (expression
                  (identifier))
                (logic_operator)
                (expression
                  (value
                    (integer)))))))))))

==================
Filter Loop Assignment
==================

list = filter i in ["one", "two", "three"] {
  i == "one"
}

---

(root
  (item
    (statement
      (assignment
        (identifier)
        (assignment_operator)
        (statement
          (filter
            (identifier)
            (expression
              (value
                (list
                  (expression
                    (value
                      (string)))
                  (expression
                    (value
                      (string)))
                  (expression
                    (value
                      (string))))))
            (item
              (statement
                (expression
                  (logic
                    (expression
                      (identifier))
                    (logic_operator)
                    (expression
                      (value
                        (string)))))))))))))
