tree-sitter-dust/corpus/futures.txt
================================================================================
Simple Future
================================================================================

async { (output 'Whaddup') }

--------------------------------------------------------------------------------

(root
  (block
    (statement
      (expression
        (value
          (future
            (block
              (statement
                (expression
                  (function_call
                    (built_in_function
                      (expression
                        (value
                          (string))))))))))))))

================================================================================
Complex Future
================================================================================
async {
  if 1 % 2 == 0 {
    true
  } else {
    false
  }

  'foobar'
}

async { 123 }

'foo'

--------------------------------------------------------------------------------

(root
  (block
    (statement
      (expression
        (value
          (future
            (block
              (statement
                (if_else
                  (if
                    (expression
                      (logic
                        (expression
                          (math
                            (expression
                              (value
                                (integer)))
                            (math_operator)
                            (expression
                              (value
                                (integer)))))
                        (logic_operator)
                        (expression
                          (value
                            (integer)))))
                    (block
                      (statement
                        (expression
                          (value
                            (boolean))))))
                  (else
                    (block
                      (statement
                        (expression
                          (value
                            (boolean))))))))
              (statement
                (expression
                  (value
                    (string)))))))))
    (statement
      (expression
        (value
          (future
            (block
              (statement
                (expression
                  (value
                    (integer)))))))))
    (statement
      (expression
        (value
          (string))))))
