tree-sitter-dust/corpus/identifiers.txt
==================
Simple Identifiers
==================

x
_y
__xyz__

---

(root
  (statement
    (expression
      (identifier)))
  (statement
    (expression
      (identifier)))
  (statement
    (expression
      (identifier))))
