tree-sitter-dust/corpus/range.txt
================================================================================
Simple Range
================================================================================

0..10

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (value
        (range)))))
