tree-sitter-dust/corpus/reduce.txt
==================
Simple Reduce Loop
==================

reduce i to acc in [1, 2, 3] {
  acc += i
}

---

(root
  (statement
    (reduce
      (identifier)
      (identifier)
      (expression
        (value
          (list
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer))))))
      (statement
        (assignment
          (identifier)
          (assignment_operator)
          (statement
            (expression
              (identifier))))))))

==================
Nested Reduce Loop
==================

reduce i to acc in ["one", "two", "three"] {
  acc += i
}

---

(root
  (statement
    (reduce
      (identifier)
      (identifier)
      (expression
        (value
          (list
            (expression
              (value
                (string)))
            (expression
              (value
                (string)))
            (expression
              (value
                (string))))))
      (statement
        (assignment
          (identifier)
          (assignment_operator)
          (statement
            (expression
              (identifier))))))))
