tree-sitter-dust/corpus/remove.txt
================================================================================
Simple Remove
================================================================================

remove i from [1, 2, 3] {
  i <= 2
}

--------------------------------------------------------------------------------

(root
  (statement
    (remove
      (identifier)
      (expression
        (value
          (list
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer))))))
      (block
        (statement
          (expression
            (logic
              (expression
                (identifier))
              (logic_operator)
              (expression
                (value
                  (integer))))))))))

================================================================================
Nested Remove
================================================================================

remove i from big_list {
  remove j from i {
    j != 42
  }
}

--------------------------------------------------------------------------------

(root
  (statement
    (remove
      (identifier)
      (expression
        (identifier))
      (block
        (statement
          (remove
            (identifier)
            (expression
              (identifier))
            (block
              (statement
                (expression
                  (logic
                    (expression
                      (identifier))
                    (logic_operator)
                    (expression
                      (value
                        (integer)))))))))))))
