tree-sitter-dust/corpus/simple_values.txt
==================
Booleans
==================

true
false

---

(root
  (statement
    (expression
      (value
        (boolean))))
  (statement
    (expression
      (value
        (boolean)))))

==================
Integers
==================

1 2 3
456 7

---

(root
  (statement
    (expression
      (value
        (integer))))
  (statement
    (expression
      (value
        (integer))))
  (statement
    (expression
      (value
        (integer))))
  (statement
    (expression
      (value
        (integer))))
  (statement
    (expression
      (value
        (integer)))))

==================
Strings
==================

"one" 'two' "three" `four` 'five'

---

(root
    (statement
      (expression
        (value
          (string))))
    (statement
      (expression
        (value
          (string))))
    (statement
      (expression
        (value
          (string))))
    (statement
      (expression
        (value
          (string))))
    (statement
      (expression
        (value
          (string)))))
