tree-sitter-dust/corpus/values.txt
================================================================================
Booleans
================================================================================

true
false

--------------------------------------------------------------------------------

(root
  (statement
    (statement_kind
      (expression
        (value
          (boolean)))))
  (statement
    (statement_kind
      (expression
        (value
          (boolean))))))

================================================================================
Integers
================================================================================

1 2 3
-456 -7

--------------------------------------------------------------------------------

(root
  (statement
    (statement_kind
      (expression
        (value
          (integer)))))
  (statement
    (statement_kind
      (expression
        (value
          (integer)))))
  (statement
    (statement_kind
      (expression
        (value
          (integer)))))
  (statement
    (statement_kind
      (expression
        (value
          (integer)))))
  (statement
    (statement_kind
      (expression
        (value
          (integer))))))

================================================================================
Floats
================================================================================

0.0
1.0
666.0
-0.666
NaN
Infinity
infinity
nan

nana
infinity_gauntlet

--------------------------------------------------------------------------------

(root
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (value
          (float)))))
  (statement
    (statement_kind
      (expression
        (identifier))))
  (statement
    (statement_kind
      (expression
        (identifier)))))

================================================================================
Strings
================================================================================

"one" 'two' "three" `four` 'five'

--------------------------------------------------------------------------------

(root
  (statement
    (statement_kind
      (expression
        (value
          (string)))))
  (statement
    (statement_kind
      (expression
        (value
          (string)))))
  (statement
    (statement_kind
      (expression
        (value
          (string)))))
  (statement
    (statement_kind
      (expression
        (value
          (string)))))
  (statement
    (statement_kind
      (expression
        (value
          (string))))))
