tree-sitter-dust/corpus/yield.txt
================================================================================
Simple Yield
================================================================================

1 -> (output)

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (yield
        (expression
          (value
            (integer)))
        (built_in_function)))))

================================================================================
Yield Chain
================================================================================

x -> (foo) -> (bar) -> (abc)

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (yield
        (expression
          (yield
            (expression
              (yield
                (expression
                  (identifier))
                (identifier)))
            (identifier)))
        (identifier)))))
